examples/test/testpolicy19050.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19050
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key30: value4
      key12: value29
      key11: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value40
          key42: value3
      podSelector:
        matchLabels:
          key13: value43
          key1: value47
